# ecom

./: pyproject.toml
ecomsite/: db.sqlite3
ecomsite/ecomsite/: settings.py  urls.py
ecomsite/shop/: views.py
ecomsite/shop/migrations/: 0001_initial.py
ecomsite/shop/templates/shop/: detail.html  index.html
